fix: eliminar vertical-align de imagen del logo en CSS

--- a/styles.css
+++ b/styles.css
@@ -303,7 +303,6 @@ header {
   border: none;
   box-shadow: none;
   outline: none;
-  vertical-align: middle;
 }
 
 .logo-link:hover #site-logo-img {
